--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -20,4 +20,15 @@ $cyan: #6cb2eb;
 
 $dark: #1c1c1c;
 $light: #3d3d3f;
+$site-light: #292929;
 
+$site-red: #b624ff;
+$site-blue: #53c9eb;
+$site-dark-yellow: #b6d546;
+$site-teal: #848393;
+$site-light-grey: #4d4d4d;
+
+$facebook: #3b5998;
+$linkedin: #0077b5;
+$twitter: #1da1f2;
+$youtube: #ff0000;
