--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,10 +1,24 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
 
 @import "variables";
 
 @import "~bootstrap";
 
+body, html{
+    font-family: 'Raleway', sans-serif;
+}
+
+.btn-link, .a{
+    transition: all 0.3s ease-in-out;
+    text-decoration: none !important;
+    font-weight: 600;
+    color: $green;
+}
+
+.btn-link:hover, .a:hover{
+    text-decoration: none !important;
+}
 
 .search-input{
     border-radius: 0 25px 25px 0;
@@ -23,7 +37,7 @@
 }
 
 .search-btn.btn-outline-success:focus{
-     box-shadow: lighten($light, 15%) !important;
+    box-shadow: lighten($light, 15%) !important;
 }
 
 .search-btn:hover, .search-btn:active, .search-btn:focus, .search-btn:visited{
@@ -31,3 +45,205 @@
     border: solid  1px lighten($light, 15%) !important;
     box-shadow: lighten($light, 15%) !important;
 }
+
+.footer-title{
+    font-weight: 700;
+    font-size: 0.8em;
+    letter-spacing: 1.1px;
+}
+
+.footer-paragraph{
+    font-weight: 600;
+    font-size: 0.7em;
+    color: $site-light-grey;
+    line-height: 2;
+    letter-spacing: 1.1px;
+
+}
+
+.red-title{
+    color: $site-red ;
+}
+
+.blue-title{
+    color: $site-blue;
+}
+
+.yellow-title{
+    color: $site-dark-yellow;
+}
+
+.teal-title{
+    color: $site-teal;
+}
+
+.footer-list{
+
+}
+
+.footer-list-item{
+    padding: 2px 0;
+}
+
+.site-ulist-blue .footer-list-item a{
+    text-decoration: none;
+    color: $site-light-grey;
+}
+
+.site-ulist-blue .footer-list-item a:hover,
+.site-ulist-blue .footer-list-item a:active,
+.site-ulist-blue .footer-list-item a:focus,{
+    color: $site-blue;
+}
+
+.site-ulist-yellow .footer-list-item a{
+    text-decoration: none;
+    color: $site-light-grey;
+}
+
+.site-ulist-yellow .footer-list-item a:hover,
+.site-ulist-yellow .footer-list-item a:active,
+.site-ulist-yellow .footer-list-item a:focus,{
+    color: $site-dark-yellow;
+}
+
+.site-ulist{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.site-social-ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.site-social-ul li{
+    display: inline-block;
+    margin-right: 15px;
+
+}
+
+.site-social-ul li a{
+    display: inline-block;
+    color: $site-light-grey;
+    border-radius: 50%;
+    text-align: center;
+    width: 25px;
+    height: 25px;
+}
+
+.site-social-ul li a:hover{
+    color: white;
+}
+
+.site-social-ul li:first-child a:hover{
+    background-color: $facebook;
+}
+
+.site-social-ul li:nth-child(2) a:hover{
+    background-color: $linkedin;
+}
+
+.site-social-ul li:nth-child(3) a:hover{
+    background-color: $twitter;
+}
+
+.site-social-ul li:last-child a:hover{
+    background-color: $youtube;
+}
+
+.bg-site-light{
+    background-color: $site-light;
+}
+
+a.gotop{
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    background-color: $site-light-grey;
+    border-radius: 50%;
+    color: lighten($site-light-grey , 35%);
+}
+
+.newsletter-wrapper p{
+    color: white;
+    font-size: 1.2rem;
+
+}
+
+.newsletter-wrapper form{
+    display: inline-block;
+}
+
+.newsletter-wrapper form input.newsletter-form-control{
+    background-color: $light;
+    border: none;
+    border-radius: 1px;
+}
+
+.newsletter-btn, .newsletter-btn:hover{
+    background-color: transparent;
+    border: solid 1px white;
+    color: white;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.content-wrapper{
+    padding-bottom: 75px;
+    padding-top: 75px;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+}
+
+.signin-card  img{
+    display: inline-block;
+}
+
+.signin-card p{
+    text-align: center;
+    color: lighten($site-light-grey,35%);
+}
+
+.signin-card h4{
+    font-weight: 400;
+    color: $dark;
+    text-align: center;
+}
+.auth-btn{
+    background-color: $green;
+    color: white;
+    padding-left: 50px;
+    padding-right: 50px;
+    letter-spacing: 1.1px;
+}
+
+.auth-btn:hover{
+    color: white;
+    background-color: lighten($green, 15%);
+}
+
+.auth-form{
+
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.divider{
+    height: 1px;
+    width: 100%;
+    display: inline-block;
+    background-color: lighten($site-light-grey, 50%);
+}
+
+.auth-form .form-control{
+    border-radius: 0  !important;
+    border : solid 1px lighten($site-light-grey, 50%) !important;
+}
+
+.auth-form .form-check-label{
+    color: lighten($site-light-grey, 35%);
+    }
